removed border radius - no longer needed due to the clipPath added to Record SVG

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,6 @@ main{
     animation-duration: 2s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
-    border-radius: 50%;
 }
 
 #player {
